# mnist-app

./: .tool-versions  README.md
js-training/: index.html  main.js
python-web-app/: index.html  main.py  model.onnx  pyproject.toml
python-web-app/static/: main.js  style.css
python-web-app/train/: show_data.py
train/: model.onnx  predict.py  pyproject.toml  train.py
