[tool.poetry]
name = "python-web-app"
version = "0.1.0"
description = ""
authors = ["ooooddy <oda.3161@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = "0.81.0"
uvicorn = "0.18.3"
skl2onnx = "1.15.0"
packaging = "21.3"
torch = "1.11.0"
torchvision = "0.12.0"
python-multipart = "0.0.5"
pillow = "9.2.0"
onnxruntime = "1.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
